Finally solved the spacing issues?

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -409,21 +409,21 @@ h4+p {
   color: #222 !important;
 }
 
+.series-description::first-line{
+  font-weight: 800;
+  font-size: 2.5rem;
+}
+
 .series-description {
   grid-column: 1 / span 2;
   margin: 0 auto;
-  margin-bottom: 2.5vh;
   line-height: unset;
-}
 
-.series-description:first-line {
-  font-size: 9vw;
+  font-size: 1.3rem;
 }
 
 .press-description {
-  margin-top: -2em;
   padding: 1vh 0 1vh 0;
-  margin-bottom: 1.5vh;
 }
 
 @media (max-width: 991.98px) {
@@ -528,6 +528,16 @@ h4+p {
 
   .press-description {
      margin-bottom: 2.5vh;
+     margin-top: -2em;
+   }
+
+   .series-description {
+    margin-bottom: 2.5vh;
+    text-align: justify;
+   }
+
+   p {
+    text-align: justify;
    }
 
 }
